// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Action should NOT render tooltip when tooltip property is set to false 1`] = `
<Button
  active={false}
  aria-label="Click me"
  block={false}
  bsClass="btn"
  bsStyle="default"
  className=""
  data-feature="action.feature"
  disabled={false}
  onClick={[Function]}
  onMouseDown={[Function]}
  role={null}
  title="Title to describe click me button"
>
  <Memo(Icon)
    name="talend-caret-down"
  />
  <span>
    Click me
  </span>
</Button>
`;

exports[`Action should NOT render tooltip when tooltip property is set to false with hideLabel property 1`] = `
<Button
  active={false}
  aria-label="Click me"
  block={false}
  bsClass="btn"
  bsStyle="default"
  className="btn-icon-only"
  data-feature="action.feature"
  disabled={false}
  onClick={[Function]}
  onMouseDown={[Function]}
  role={null}
  title="Title to describe click me button"
>
  <Memo(Icon)
    name="talend-caret-down"
  />
</Button>
`;

exports[`Action should render a button with a overlay component 1`] = `
<OverlayTrigger
  onClick={[Function]}
  overlayComponent={[Function]}
  overlayId="myOverlayId"
  overlayPlacement="bottom"
  preventScrolling={false}
  trigger="click"
>
  <Button
    active={false}
    aria-haspopup={true}
    aria-label="Click me"
    block={false}
    bsClass="btn"
    bsStyle="default"
    className=""
    data-feature="action.feature"
    disabled={false}
    onClick={null}
    onMouseDown={null}
    onMouseEnter={null}
    onMouseLeave={null}
    role={null}
    title="Title to describe click me button"
  >
    <Memo(Icon)
      name="talend-caret-down"
    />
    <span>
      Click me
    </span>
  </Button>
</OverlayTrigger>
`;

exports[`Action should render a button without an overlay component if inProgress is true 1`] = `
<Button
  active={false}
  aria-label="Click me (in progress)"
  block={false}
  bsClass="btn"
  bsStyle="default"
  className="theme-btn-disabled"
  data-feature="action.feature"
  disabled={true}
  onClick={null}
  onMouseDown={null}
  onMouseEnter={null}
  onMouseLeave={null}
  role={null}
  title="Title to describe click me button"
>
  <withI18nextTranslation(CircularProgress)
    size="small"
    t={[Function]}
  />
  <span>
    Click me
  </span>
</Button>
`;
